sso.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traefik-sso
  name: traefik-sso
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      app: traefik-sso
      name: traefik-sso
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: traefik-sso
        name: traefik-sso
    spec:
      containers:
      - env:
        - name: PROVIDERS_GOOGLE_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: clientid
              name: traefik-sso
        - name: PROVIDERS_GOOGLE_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: clientsecret
              name: traefik-sso
        - name: SECRET
          valueFrom:
            secretKeyRef:
              key: secret
              name: traefik-sso
        - name: COOKIE_DOMAIN
          value: uncia.fr
        - name: AUTH_HOST
          value: brief11.uncia.fr
        - name: INSECURE_COOKIE
          value: "false"
        - name: WHITELIST
          value: simplon.nicolasmarty@gmail.com, n.marty.34@gmail.com
        - name: LOG_LEVEL
          value: debug
        image: thomseddon/traefik-forward-auth:2
        imagePullPolicy: Always
        name: traefik-sso
        ports:
        - containerPort: 4181
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sso
spec:
  forwardAuth:
    address: http://traefik-sso:4181
    authResponseHeaders:
        - "X-Forwarded-User"
    trustForwardHeader: true
