voteapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voteapp
  labels:
    app: vote-app
spec:
  selector:
    matchLabels:
      app: vote-app
  replicas: 2
  template:
    metadata:
      labels:
        app: vote-app
    spec:
      containers:
      - name: voteapp
        image: nemesys34/k8b8nm:1.0.115
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi
---
# Création d'un cluster pour voteapp accessible sur le port 80

apiVersion: v1
kind: Service
metadata:
  name: voteapp
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: vote-app
---
# Déployement de la base de donnée Redis

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis-bd
spec:
  selector:
    matchLabels:
      app: redis-bd
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-bd
    spec:
      volumes:
      - name: redis-vol
        persistentVolumeClaim:
          claimName: nm-vol
      containers:
      - name: redis
        image: redis
        args: ["--requirepass","$(REDIS_PWD)"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-vol
          mountPath: "/data"
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
# cR2
apiVersion: v1
kind: Service
metadata:
  name: clusteredis
spec:
  type: ClusterIP
  ports:
  - port: 6379
  selector:
    app: redis-bd
