ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  namespace: default
  annotations:
    cert-manager.io/issuer: "brief11.uncia.fr"
    traefik.ingress.kubernetes.io/router.middlewares: default-ipwhitelist@kubernetescrd, default-https-redirect@kubernetescrd, default-sso@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: default-client-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - brief11.uncia.fr
      secretName: tls-secret
  rules:
  - host: "brief11.uncia.fr"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: voteapp
            port:
              number: 80
